cabal-version:   3.0
name:            dear-imgui-reflex
version:         1.0.0
synopsis:        See README for more info
description:     See README for more info
homepage:        https://github.com/o1lo01ol1o/dear-imgui-reflex
bug-reports:     https://github.com/o1lo01ol1o/dear-imgui-reflex/issues
license:         MIT
license-file:    LICENSE
author:          Tim
maintainer:      Tim <tim.pierson@gmail.com>
copyright:       2021 Tim
category:        Graphics
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:     GHC ==8.8.4

source-repository head
  type:     git
  location: https://github.com/o1lo01ol1o/dear-imgui-reflex.git

common common-options
  build-depends:
    , base                    ^>=4.13.0.0
    , bytestring
    , constraints
    , constraints-extras
    , dear-imgui
    , exception-transformers
    , dependent-map
    , dependent-sum
    , dependent-sum-template
    , lens
    , gl 
    , sdl2
    , text
    , managed
    , mtl
    , reflex >= 0.8
    , ref-tf
    , reflex-sdl2
    , StateVar
    , some
    , stm

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Reflex.DearImGui
    Reflex.DearImGui.Events
    Reflex.DearImGui.Types

executable dear-imgui-reflex-example
  hs-source-dirs: examples
  main-is:        Main.hs
  build-depends:
    , base
    , constraints
    , constraints-extras
    , dependent-sum
    , dear-imgui
    , dear-imgui-reflex
    , gl
    , managed
    , mtl
    , reflex
    , reflex-sdl2
    , some
    , sdl2

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
